// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render properly 1`] = `
<DocumentFragment>
  <div
    class="inputWrapper"
  >
    Some text
    <input
      id="input"
      title="input"
    />
    <label
      for="input"
    >
      label
    </label>
  </div>
</DocumentFragment>
`;

exports[`Input when name and label is empty should render properly 1`] = `
<DocumentFragment>
  <div
    class="inputWrapper"
  >
    Some text
    <input
      id=""
      title=""
    />
  </div>
</DocumentFragment>
`;
